# hpp-roboptim

./: AUTHORS  CMakeLists.txt  NEWS  README.md  deps.cmake
doc/: Doxyfile.extra.in  footer.html
include/hpp/roboptim/: fwd.hh  spline-directpath.hh
src/: CMakeLists.txt  spline-directpath.cc  spline-directpath.tex
tests/: CMakeLists.txt  simple.cc
